// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-Leaderboard-Podium-___styles__Podium___2rb4T"
>
  <div
    className="src-shared-components-Leaderboard-Podium-___styles__PodiumWrap___2Czwe"
  >
    <div
      className="src-shared-components-Leaderboard-Podium-___styles__podium-column___rPHl-"
    >
      <PodiumSpot
        competitor={
          Object {
            "challenge_stats.count": 99999,
            "challenge_stats.winner_handle": "overachieving.mofo",
            "photourl": "some.fake.string",
            "points": 9999999999,
            "rank": 1,
          }
        }
      />
    </div>
    <div
      className="src-shared-components-Leaderboard-Podium-___styles__podium-column___rPHl-"
    >
      <PodiumSpot
        competitor={
          Object {
            "challenge_stats.count": 99999,
            "challenge_stats.winner_handle": "overachieving.mofo",
            "photourl": "some.fake.string",
            "points": 9999999999,
            "rank": 1,
          }
        }
      />
    </div>
    <div
      className="src-shared-components-Leaderboard-Podium-___styles__podium-column___rPHl-"
    >
      <PodiumSpot
        competitor={
          Object {
            "challenge_stats.count": 99999,
            "challenge_stats.winner_handle": "overachieving.mofo",
            "photourl": "some.fake.string",
            "points": 9999999999,
            "rank": 1,
          }
        }
      />
    </div>
    <div
      className="src-shared-components-Leaderboard-Podium-___styles__podium-column___rPHl-"
    >
      <PodiumSpot
        competitor={
          Object {
            "challenge_stats.count": 99999,
            "challenge_stats.winner_handle": "overachieving.mofo",
            "photourl": "some.fake.string",
            "points": 9999999999,
            "rank": 1,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-Leaderboard-Podium-___styles__Podium___2rb4T"
>
  <div
    className="src-shared-components-Leaderboard-Podium-___styles__PodiumWrap___2Czwe"
  />
</div>
`;
